<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/teleopMain"
    tools:context=".MainActivity$PlaceholderFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/defense_Placement"
            android:id="@+id/defense_Placement_TextView" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:id="@+id/defense_Placement_Image"
            android:scaleType="fitCenter"
            android:src="@drawable/defensepositionslarge"
            android:adjustViewBounds="false" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:text="@string/defense_Position_1"
                android:id="@+id/defense_Position_1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/defense_Position_2"
                android:id="@+id/defense_Position_2"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/defense_Position_3"
                android:id="@+id/defense_Position_3"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/defense_Position_4"
                android:id="@+id/defense_Position_4"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="15dp"
                android:text="@string/defense_Position_5"
                android:id="@+id/defense_Position_5"/>
        </RadioGroup>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/defense_Placement_Button"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/other_Option_Button_Done" />
    </LinearLayout>
</ScrollView>