<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/autoMain"
    tools:context=".MainActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="15dp"
            android:text="@string/auto_Reach_Defense_TextView"
            android:id="@+id/reach_Defense_Auto_TextView" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/reach_Defense_Auto_Image"
            android:scaleType="fitCenter"
            android:src="@drawable/reachdefense"
            android:adjustViewBounds="false" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reach_Defense_Auto_Button"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/auto_Reach_Defense_Button" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/auto_Cross_Defense_TextView"
            android:id="@+id/cross_Defense_Auto_TextView" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/cross_Defense_Auto_Image"
            android:scaleType="fitCenter"
            android:src="@drawable/crossdefense"
            android:adjustViewBounds="false" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cross_Defense_Auto_Button"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/auto_Cross_Defense_Button" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/auto_Shoot_TextView"
            android:id="@+id/shoot_Goal_Auto_TextView" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/shoot_Goal_Auto_Image"
            android:scaleType="fitCenter"
            android:src="@drawable/shootgoal"
            android:adjustViewBounds="false" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/shoot_Goal_Auto_Button"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/auto_Shoot_Button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <!-- Progression buttons -->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auto_Button_Back_Auto"
                android:id="@+id/button_Back_Auto"
                android:onClick="changePageDown"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:textSize="25dp" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auto_Button_Next_Auto"
                android:id="@+id/button_Next_Auto"
                android:onClick="changePageUp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:textSize="25dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>