<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/teleopMain"
    tools:context=".MainActivity$PlaceholderFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/tower_Position"
            android:id="@+id/tower_Placement_TextView" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:id="@+id/tower_Placement_Image"
            android:scaleType="fitCenter"
            android:src="@drawable/capturescalepositionlarge"
            android:adjustViewBounds="false" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:text="@string/tower_Position_A"
                android:id="@+id/tower_Position_A"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/tower_Position_B"
                android:id="@+id/tower_Position_B"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="15dp"
                android:text="@string/tower_Position_C"
                android:id="@+id/tower_Position_C"/>
        </RadioGroup>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tower_Button"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/other_Option_Button_Done" />
    </LinearLayout>
</ScrollView>