<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/teleopMain"
    tools:context=".MainActivity$PlaceholderFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="15dp"
            android:text="@string/defenseCrossed"
            android:id="@+id/defenses_Crossable_TextView" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_gravity="center_horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="15dp"
                    android:text="@string/sallyport"
                    android:id="@+id/sally_Port_RadioButton" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="15dp"
                    android:text="@string/drawbridge"
                    android:id="@+id/drawbridge_RadioButton" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="15dp"
                    android:text="@string/moat"
                    android:id="@+id/moat_RadioButton" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="15dp"
                    android:text="@string/rockwall"
                    android:id="@+id/rock_Wall_RadioButton" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="15dp"
                    android:text="@string/roughTerrain"
                    android:id="@+id/rough_Terrain_RadioButton" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="15dp"
                    android:text="@string/portcullis"
                    android:id="@+id/portcullis_RadioButton" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="15dp"
                    android:text="@string/ramparts"
                    android:id="@+id/ramparts_RadioButton" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="15dp"
                    android:text="@string/chevaldefrise"
                    android:id="@+id/cheval_De_Frise_RadioButton" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="15dp"
                    android:text="@string/hiddenPassage"
                    android:id="@+id/hidden_Passage_RadioButton" />
            </RadioGroup>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_horizontal">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:id="@+id/sally_Port_Image"
                    android:scaleType="fitCenter"
                    android:src="@drawable/sallyport"
                    android:adjustViewBounds="false"/>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:id="@+id/drawbridge_Image"
                    android:scaleType="fitCenter"
                    android:src="@drawable/drawbridge"
                    android:adjustViewBounds="false" />
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:id="@+id/moat_Image"
                    android:scaleType="fitCenter"
                    android:src="@drawable/moat"
                    android:adjustViewBounds="false" />
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:id="@+id/rock_Wall_Image"
                    android:scaleType="fitCenter"
                    android:src="@drawable/rockwall"
                    android:adjustViewBounds="false" />
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:id="@+id/rough_Terrain_Image"
                    android:scaleType="fitCenter"
                    android:src="@drawable/roughterrain"
                    android:adjustViewBounds="false" />
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:id="@+id/portcullis_Image"
                    android:scaleType="fitCenter"
                    android:src="@drawable/portcullis"
                    android:adjustViewBounds="false" />
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:id="@+id/ramparts_Image"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ramparts"
                    android:adjustViewBounds="false" />
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:id="@+id/cheval_De_Frise_Image"
                    android:scaleType="fitCenter"
                    android:src="@drawable/chevaldefrise"
                    android:adjustViewBounds="false" />
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:id="@+id/hidden_Passage_Image"
                    android:scaleType="fitCenter"
                    android:src="@drawable/hiddenpassage"
                    android:adjustViewBounds="false" />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/defense_Button"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/other_Option_Button_Done" />
    </LinearLayout>
</ScrollView>
